--- a/src/app/modules/contact/pages/edit/edit.component.html
+++ b/src/app/modules/contact/pages/edit/edit.component.html
@@ -1,1 +1,55 @@
-<p>edit works!</p>
+<app-section>
+	<h1 class="text-center f2">Atualizar Contato</h1>
+	<form
+		[formGroup]="editForm"
+		(ngSubmit)="onSubmit()"
+		class="relative flex flex-col w-full gap-4 p-8 mx-auto border md:w-1/2 xl:w-1/3 border-gray rounded-2xl"
+	>
+		<div>
+			<label for="nome">Nome</label>
+			<input type="text" id="nome" formControlName="nome" [ngClass]="formUtils.invalidClass(formUtils.getControl(editForm, 'nome'), this.isSubmited)" />
+			@if (formUtils.getControl(editForm, "nome").touched && formUtils.getControl(editForm, "nome").invalid && this.isSubmited) {
+				<div class="text-xs">Nome é obrigatório.</div>
+			}
+		</div>
+		<div>
+			<label for="email">Email</label>
+			<input
+				type="email"
+				id="email"
+				formControlName="email"
+				[ngClass]="formUtils.invalidClass(formUtils.getControl(editForm, 'email'), this.isSubmited)"
+			/>
+			@if (formUtils.getControl(editForm, "email").touched && formUtils.getControl(editForm, "email").invalid && this.isSubmited) {
+				<div class="text-xs">Informe um email válido.</div>
+			}
+		</div>
+		<div>
+			<label for="celular">Celular</label>
+			<input
+				type="text"
+				id="celular"
+				formControlName="celular"
+				[ngClass]="formUtils.invalidClass(formUtils.getControl(editForm, 'celular'), this.isSubmited)"
+			/>
+			@if (formUtils.getControl(editForm, "celular").touched && formUtils.getControl(editForm, "celular").invalid && this.isSubmited) {
+				<div class="text-xs">Celular é obrigatório.</div>
+			}
+		</div>
+		<div>
+			<label for="telefone">Telefone</label>
+			<input
+				type="text"
+				id="telefone"
+				formControlName="telefone"
+				[ngClass]="formUtils.invalidClass(formUtils.getControl(editForm, 'telefone'), this.isSubmited)"
+			/>
+			@if (formUtils.getControl(editForm, "telefone").touched && formUtils.getControl(editForm, "telefone").invalid && this.isSubmited) {
+				<div class="text-xs">Telefone é obrigatório.</div>
+			}
+		</div>
+		<button type="submit" class="mt-3 btn-white" title="Atualizar Contato">
+			{{ this.isLoading ? "Atualizando o Contato..." : "Atualizar Contato" }}
+		</button>
+	</form>
+</app-section>
